1998-08-23  Alex Roberts <bse@dial.pipex.com>

	* Separated plugins into their own directories

Sat Aug 22 14:33:49 MET DST 1998  Jochen Friedrich <jochen@scram.de>

	* commands.c, gE_files.c: replaced basename() by g_basename().

Thu Aug 20 20:25:57 1998  Owen Taylor  <otaylor@redhat.com>

	* Restored gtk_widget_grab_focus's, because they seem
	  to work now. (if you update to the latest CVS GTK+)

	* For !WITHOUT_GNOME, don't create the toolbar handlebox
	  ourselves, since gnome-app-helper creates it. Obey
	  the ui_properties setting with respect to toolbar
	  relief.

1998-08-18  Evan Lawrence <evan@worldpath.net>

	* Disabled several gtk_text_grab_focus's until I can figure out why
	  recent changes in gtk cause gEdit to crash.. Owen?

1998-08-1?  Evan Lawrence <evan@worldpath.net>

	* Fixed the recent-list to remove duplicate entries...

	* Added Martin Wahlen's spell-checking plugin to CVS.. We need to
	  add some plugin functions to the API for him, but what's he's got
	  looks great...

	* Committed Dan's latest modifications to the scrollball widget...

1998-08-13  Chris Lahey  <clahey@umich.edu>

	* gE_document.c: 
	* gE_plugin_api.c: 
	* gedit.c: 
	* gE_init.c: 
	* commands.c:
	Got rid of most of the GINT_TO_POINTER and GPOINTER_TO_INT calls.

1998-08-13  Evan Lawrence <evan@worldpath.net>

	* Following Chris's instructions, made an initial attempt at making the plugins
	  api 64 bit clean...

1998-08-12  Evan Lawrence <evan@worldpath.net>

	* Committed Andy's patch, after making the neccassary modifications
	  to get it to compile for the gnome version...

	* Got a new (better) version of the scrollball widget from Daniel
	  Dunbar, and committed that...

1998-08-11  Andy Kahn <kahn@zk3.dec.com>

	* remove "#include "plugin.h" from main.h because the whole world
	doesn't need it.  include it only where needed.

	* gE_prefs.[ch]: cleanup.  drop a ton of unneeded cruft.  pretty print.

	* gE_document.c: cleanup gE_window_new().
